[package]
name = "gratitude"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.68"
cfg-if = "1.0.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
thiserror = "1.0.40"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
